# openweather-onecall-rs

./: .gitignore  Cargo.toml
examples/: onecall.rs
src/: lib.rs
test/: onecall_response.json
