[package]
name = "openweather-onecall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", default-features=false, features = ["json", "rustls-tls", "blocking"] }
serde_json = "1.0.68"
serde = "1.0.130"
serde_derive = "1.0.130"
chrono = {version="0.4.19", features=["serde"]}
